chore: center div and fix overflow-x on page

--- a/fudo/app/globals.css
+++ b/fudo/app/globals.css
@@ -34,3 +34,7 @@
 .color {
   background: linear-gradient(to bottom, #FEEDED, #FFF);
 }
+
+body{
+  overflow-x: hidden;
+}
